notebooks: evalutions consolidate
Former-commit-id: 06abab5fcdbe4080cb30597f71c3ef45cbe0ea1c

--- a/notebooks/06-evaluations_consolidate.ipynb
+++ b/notebooks/06-evaluations_consolidate.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -312,6 +312,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>blstm</td>\n",
+       "      <td>softmax</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>5.00e-04</td>\n",
+       "      <td>32x32x32x32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>glove/s50</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>1.382979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -324,7 +337,7 @@
        "      <td>2.988865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>11</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.01</td>\n",
@@ -337,46 +350,7 @@
        "      <td>2.015204</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>dblstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>5.00e-04</td>\n",
-       "      <td>256x128</td>\n",
-       "      <td>1</td>\n",
-       "      <td>glove/s50</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>dblstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>5.00e-04</td>\n",
-       "      <td>256x256</td>\n",
-       "      <td>1</td>\n",
-       "      <td>glove/s50</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>dblstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>2.01</td>\n",
-       "      <td>5.00e-04</td>\n",
-       "      <td>256x256</td>\n",
-       "      <td>1</td>\n",
-       "      <td>glove/s50</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -389,7 +363,7 @@
        "      <td>2.015204</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>13</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -397,12 +371,12 @@
        "      <td>32x32x32</td>\n",
        "      <td>1</td>\n",
        "      <td>glove/s50</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>20.39</td>\n",
+       "      <td>41.09</td>\n",
+       "      <td>2.015204</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>14</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -415,111 +389,33 @@
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>dblstm</td>\n",
+       "      <td>crf</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>5.00e-04</td>\n",
+       "      <td>32x32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>glove/s50</td>\n",
+       "      <td>38.38</td>\n",
+       "      <td>65.90</td>\n",
+       "      <td>1.717040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>dblstm</td>\n",
+       "      <td>crf</td>\n",
+       "      <td>3.01</td>\n",
+       "      <td>5.00e-04</td>\n",
+       "      <td>32x32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>glove/s50</td>\n",
+       "      <td>38.38</td>\n",
+       "      <td>65.90</td>\n",
+       "      <td>1.717040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>dblstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>1.00e-03</td>\n",
-       "      <td>128</td>\n",
-       "      <td>1</td>\n",
-       "      <td>glove/s50</td>\n",
-       "      <td>6.27</td>\n",
-       "      <td>8.29</td>\n",
-       "      <td>1.322169</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>dblstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>1.00e-03</td>\n",
-       "      <td>16x16x16x16</td>\n",
-       "      <td>1</td>\n",
-       "      <td>word2vec/s50</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>0.988889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>dblstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>5.00e-04</td>\n",
-       "      <td>16x16x16x16</td>\n",
-       "      <td>1</td>\n",
-       "      <td>fasttext/s50</td>\n",
-       "      <td>1.17</td>\n",
-       "      <td>0.96</td>\n",
-       "      <td>0.820513</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>dblstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>5.00e-04</td>\n",
-       "      <td>16x16x16x16</td>\n",
-       "      <td>1</td>\n",
-       "      <td>glove/s50</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>3.12</td>\n",
-       "      <td>1.114286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>dblstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>3.01</td>\n",
-       "      <td>5.00e-04</td>\n",
-       "      <td>16x16x16x16</td>\n",
-       "      <td>1</td>\n",
-       "      <td>glove/s50</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>3.12</td>\n",
-       "      <td>1.114286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>dblstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>5.00e-04</td>\n",
-       "      <td>16x16x16x16</td>\n",
-       "      <td>1</td>\n",
-       "      <td>word2vec/s50</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>0.802198</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>dblstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>5.00e-04</td>\n",
-       "      <td>32x32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>glove/s50</td>\n",
-       "      <td>38.38</td>\n",
-       "      <td>65.90</td>\n",
-       "      <td>1.717040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>dblstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>3.01</td>\n",
-       "      <td>5.00e-04</td>\n",
-       "      <td>32x32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>glove/s50</td>\n",
-       "      <td>38.38</td>\n",
-       "      <td>65.90</td>\n",
-       "      <td>1.717040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.02</td>\n",
@@ -532,7 +428,7 @@
        "      <td>1.717040</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
+       "      <th>18</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.00</td>\n",
@@ -545,7 +441,7 @@
        "      <td>2.421177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <th>19</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.sanity-check.2.00</td>\n",
@@ -558,7 +454,7 @@
        "      <td>1.028651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
+       "      <th>20</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.sanity-check.00</td>\n",
@@ -571,7 +467,7 @@
        "      <td>1.697645</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
+       "      <th>21</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.sanity-check.00</td>\n",
@@ -584,7 +480,7 @@
        "      <td>2.604265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
+       "      <th>22</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -597,7 +493,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
+       "      <th>23</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -610,7 +506,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
+       "      <th>24</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -637,30 +533,22 @@
        "6               blstm       crf                 2.00  5.00e-04          256   \n",
        "7               blstm       crf                 2.00  5.00e-04  32x32x32x32   \n",
        "8               blstm   softmax                 1.00  5.00e-04      128x128   \n",
-       "9              dblstm       crf                 2.00  5.00e-04       128x64   \n",
-       "10             dblstm       crf                 2.01  5.00e-04       128x64   \n",
-       "11             dblstm       crf                 2.00  5.00e-04      256x128   \n",
-       "12             dblstm       crf                 2.00  5.00e-04      256x256   \n",
-       "13             dblstm       crf                 2.01  5.00e-04      256x256   \n",
-       "14             dblstm       crf                 2.00  5.00e-04        32x32   \n",
-       "15             dblstm       crf                 2.00  5.00e-04     32x32x32   \n",
-       "16             dblstm       crf                 2.00  5.00e-04      512x128   \n",
-       "17             dblstm       crf                 3.00  1.00e-03          128   \n",
-       "18             dblstm       crf                 3.00  1.00e-03  16x16x16x16   \n",
-       "19             dblstm       crf                 3.00  5.00e-04  16x16x16x16   \n",
-       "20             dblstm       crf                 3.00  5.00e-04  16x16x16x16   \n",
-       "21             dblstm       crf                 3.01  5.00e-04  16x16x16x16   \n",
-       "22             dblstm       crf                 3.00  5.00e-04  16x16x16x16   \n",
-       "23             dblstm       crf                 3.00  5.00e-04        32x32   \n",
-       "24             dblstm       crf                 3.01  5.00e-04        32x32   \n",
-       "25             dblstm       crf                 3.02  5.00e-04        32x32   \n",
-       "26             dblstm       crf                 3.00  5.00e-04  32x32x32x32   \n",
-       "27             dblstm       crf  3.sanity-check.2.00  5.00e-04  32x32x32x32   \n",
-       "28             dblstm       crf    3.sanity-check.00  5.00e-04  16x16x16x16   \n",
-       "29             dblstm       crf    3.sanity-check.00  5.00e-04  32x32x32x32   \n",
-       "30             dblstm       crf                 1.00  1.00e-04            8   \n",
-       "31             dblstm       crf                 1.00  1.00e-04           96   \n",
-       "32             dblstm       crf                 1.00  5.00e-04           16   \n",
+       "9               blstm   softmax                 1.00  5.00e-04  32x32x32x32   \n",
+       "10             dblstm       crf                 2.00  5.00e-04       128x64   \n",
+       "11             dblstm       crf                 2.01  5.00e-04       128x64   \n",
+       "12             dblstm       crf                 2.00  5.00e-04        32x32   \n",
+       "13             dblstm       crf                 2.00  5.00e-04     32x32x32   \n",
+       "14             dblstm       crf                 2.00  5.00e-04      512x128   \n",
+       "15             dblstm       crf                 3.00  5.00e-04        32x32   \n",
+       "16             dblstm       crf                 3.01  5.00e-04        32x32   \n",
+       "17             dblstm       crf                 3.02  5.00e-04        32x32   \n",
+       "18             dblstm       crf                 3.00  5.00e-04  32x32x32x32   \n",
+       "19             dblstm       crf  3.sanity-check.2.00  5.00e-04  32x32x32x32   \n",
+       "20             dblstm       crf    3.sanity-check.00  5.00e-04  16x16x16x16   \n",
+       "21             dblstm       crf    3.sanity-check.00  5.00e-04  32x32x32x32   \n",
+       "22             dblstm       crf                 1.00  1.00e-04            8   \n",
+       "23             dblstm       crf                 1.00  1.00e-04           96   \n",
+       "24             dblstm       crf                 1.00  5.00e-04           16   \n",
        "\n",
        "              ctx-p     embeddings  valid-f1  train-f1  ratio-f1  \n",
        "experiment_id                                                     \n",
@@ -672,33 +560,25 @@
        "6                 1      glove/s50     13.89     19.38  1.395248  \n",
        "7                 1      glove/s50     33.85     92.73  2.739439  \n",
        "8                 1      glove/s50     24.62     74.17  3.012591  \n",
-       "9                 1      glove/s50     33.23     99.32  2.988865  \n",
-       "10                1      glove/s50     20.39     41.09  2.015204  \n",
-       "11                1      glove/s50      0.00       NaN       NaN  \n",
-       "12                1      glove/s50      0.29      0.00  0.000000  \n",
-       "13                1      glove/s50      0.29      0.00  0.000000  \n",
-       "14                1      glove/s50     20.39     41.09  2.015204  \n",
-       "15                1      glove/s50      0.00       NaN       NaN  \n",
-       "16                3      glove/s50      0.30      0.00  0.000000  \n",
-       "17                1      glove/s50      6.27      8.29  1.322169  \n",
-       "18                1   word2vec/s50      0.90      0.89  0.988889  \n",
-       "19                1   fasttext/s50      1.17      0.96  0.820513  \n",
-       "20                1      glove/s50      2.80      3.12  1.114286  \n",
-       "21                1      glove/s50      2.80      3.12  1.114286  \n",
-       "22                1   word2vec/s50      0.91      0.73  0.802198  \n",
-       "23                1      glove/s50     38.38     65.90  1.717040  \n",
-       "24                1      glove/s50     38.38     65.90  1.717040  \n",
-       "25                1      glove/s50     38.38     65.90  1.717040  \n",
-       "26                1      glove/s50     38.06     92.15  2.421177  \n",
-       "27                1      glove/s50     96.68     99.45  1.028651  \n",
-       "28                3      glove/s50     39.92     67.77  1.697645  \n",
-       "29                3      glove/s50     37.98     98.91  2.604265  \n",
-       "30                1      glove/s50     22.04       NaN       NaN  \n",
-       "31                1      glove/s50     24.92       NaN       NaN  \n",
-       "32                1      glove/s50     30.70       NaN       NaN  "
+       "9                 1      glove/s50      0.94      1.30  1.382979  \n",
+       "10                1      glove/s50     33.23     99.32  2.988865  \n",
+       "11                1      glove/s50     20.39     41.09  2.015204  \n",
+       "12                1      glove/s50     20.39     41.09  2.015204  \n",
+       "13                1      glove/s50     20.39     41.09  2.015204  \n",
+       "14                3      glove/s50      0.30      0.00  0.000000  \n",
+       "15                1      glove/s50     38.38     65.90  1.717040  \n",
+       "16                1      glove/s50     38.38     65.90  1.717040  \n",
+       "17                1      glove/s50     38.38     65.90  1.717040  \n",
+       "18                1      glove/s50     38.06     92.15  2.421177  \n",
+       "19                1      glove/s50     96.68     99.45  1.028651  \n",
+       "20                3      glove/s50     39.92     67.77  1.697645  \n",
+       "21                3      glove/s50     37.98     98.91  2.604265  \n",
+       "22                1      glove/s50     22.04       NaN       NaN  \n",
+       "23                1      glove/s50     24.92       NaN       NaN  \n",
+       "24                1      glove/s50     30.70       NaN       NaN  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
