propbank#to_svm added
Former-commit-id: bbf9489710b3207c71e005031cc2e217279e0536

--- a/notebooks/06-evaluations_consolidate.ipynb
+++ b/notebooks/06-evaluations_consolidate.ipynb
@@ -13,8 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os \n",
@@ -36,8 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "propbank = Propbank.recover('datasets/binaries/db_pt_LEMMA_glove_s50.pickle')\n",
@@ -65,8 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def info(thisdir, f1_valid, f1_train=-1):\n",
@@ -126,8 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "experiments_d = {} \n",
@@ -156,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,19 +220,6 @@
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
        "      <td>1.00e-03</td>\n",
-       "      <td>128</td>\n",
-       "      <td>1</td>\n",
-       "      <td>wang2vec/s100</td>\n",
-       "      <td>1.23</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.162602</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>blstm</td>\n",
-       "      <td>crf</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>1.00e-03</td>\n",
        "      <td>128x64</td>\n",
        "      <td>1</td>\n",
        "      <td>glove/s50</td>\n",
@@ -233,7 +228,7 @@
        "      <td>2.379716</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>blstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -246,7 +241,7 @@
        "      <td>2.628344</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>blstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -259,7 +254,7 @@
        "      <td>2.074650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>blstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -272,7 +267,7 @@
        "      <td>2.074650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>5</th>\n",
        "      <td>blstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -285,7 +280,7 @@
        "      <td>1.395248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>6</th>\n",
        "      <td>blstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -298,7 +293,7 @@
        "      <td>2.739439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>7</th>\n",
        "      <td>blstm</td>\n",
        "      <td>softmax</td>\n",
        "      <td>1.00</td>\n",
@@ -311,7 +306,7 @@
        "      <td>3.012591</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>8</th>\n",
        "      <td>blstm</td>\n",
        "      <td>softmax</td>\n",
        "      <td>1.00</td>\n",
@@ -319,12 +314,12 @@
        "      <td>32x32x32x32</td>\n",
        "      <td>1</td>\n",
        "      <td>glove/s50</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>1.30</td>\n",
-       "      <td>1.382979</td>\n",
+       "      <td>24.19</td>\n",
+       "      <td>99.18</td>\n",
+       "      <td>4.100041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>9</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -337,7 +332,7 @@
        "      <td>2.988865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>10</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.01</td>\n",
@@ -350,7 +345,7 @@
        "      <td>2.015204</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>11</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -363,7 +358,7 @@
        "      <td>2.015204</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>12</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -376,7 +371,7 @@
        "      <td>2.015204</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>13</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -389,7 +384,7 @@
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>14</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.00</td>\n",
@@ -402,7 +397,7 @@
        "      <td>1.717040</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>15</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.01</td>\n",
@@ -415,7 +410,7 @@
        "      <td>1.717040</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>16</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.02</td>\n",
@@ -428,7 +423,7 @@
        "      <td>1.717040</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>17</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.00</td>\n",
@@ -441,7 +436,7 @@
        "      <td>2.421177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>18</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.sanity-check.2.00</td>\n",
@@ -454,7 +449,7 @@
        "      <td>1.028651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>19</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.sanity-check.00</td>\n",
@@ -467,7 +462,7 @@
        "      <td>1.697645</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>20</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.sanity-check.00</td>\n",
@@ -480,7 +475,7 @@
        "      <td>2.604265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>21</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -493,7 +488,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>22</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -506,7 +501,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
+       "      <th>23</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -525,67 +520,64 @@
       "text/plain": [
        "                model predictor              version        lr       hidden  \\\n",
        "experiment_id                                                                 \n",
-       "1               blstm       crf                 2.00  1.00e-03          128   \n",
-       "2               blstm       crf                 2.00  1.00e-03       128x64   \n",
-       "3               blstm       crf                 2.00  1.00e-03    128x64x32   \n",
-       "4               blstm       crf                 2.00  5.00e-04          128   \n",
-       "5               blstm       crf                 2.00  5.00e-04  16x16x16x16   \n",
-       "6               blstm       crf                 2.00  5.00e-04          256   \n",
-       "7               blstm       crf                 2.00  5.00e-04  32x32x32x32   \n",
-       "8               blstm   softmax                 1.00  5.00e-04      128x128   \n",
-       "9               blstm   softmax                 1.00  5.00e-04  32x32x32x32   \n",
-       "10             dblstm       crf                 2.00  5.00e-04       128x64   \n",
-       "11             dblstm       crf                 2.01  5.00e-04       128x64   \n",
-       "12             dblstm       crf                 2.00  5.00e-04        32x32   \n",
-       "13             dblstm       crf                 2.00  5.00e-04     32x32x32   \n",
-       "14             dblstm       crf                 2.00  5.00e-04      512x128   \n",
-       "15             dblstm       crf                 3.00  5.00e-04        32x32   \n",
-       "16             dblstm       crf                 3.01  5.00e-04        32x32   \n",
-       "17             dblstm       crf                 3.02  5.00e-04        32x32   \n",
-       "18             dblstm       crf                 3.00  5.00e-04  32x32x32x32   \n",
-       "19             dblstm       crf  3.sanity-check.2.00  5.00e-04  32x32x32x32   \n",
-       "20             dblstm       crf    3.sanity-check.00  5.00e-04  16x16x16x16   \n",
-       "21             dblstm       crf    3.sanity-check.00  5.00e-04  32x32x32x32   \n",
-       "22             dblstm       crf                 1.00  1.00e-04            8   \n",
-       "23             dblstm       crf                 1.00  1.00e-04           96   \n",
-       "24             dblstm       crf                 1.00  5.00e-04           16   \n",
+       "1               blstm       crf                 2.00  1.00e-03       128x64   \n",
+       "2               blstm       crf                 2.00  1.00e-03    128x64x32   \n",
+       "3               blstm       crf                 2.00  5.00e-04          128   \n",
+       "4               blstm       crf                 2.00  5.00e-04  16x16x16x16   \n",
+       "5               blstm       crf                 2.00  5.00e-04          256   \n",
+       "6               blstm       crf                 2.00  5.00e-04  32x32x32x32   \n",
+       "7               blstm   softmax                 1.00  5.00e-04      128x128   \n",
+       "8               blstm   softmax                 1.00  5.00e-04  32x32x32x32   \n",
+       "9              dblstm       crf                 2.00  5.00e-04       128x64   \n",
+       "10             dblstm       crf                 2.01  5.00e-04       128x64   \n",
+       "11             dblstm       crf                 2.00  5.00e-04        32x32   \n",
+       "12             dblstm       crf                 2.00  5.00e-04     32x32x32   \n",
+       "13             dblstm       crf                 2.00  5.00e-04      512x128   \n",
+       "14             dblstm       crf                 3.00  5.00e-04        32x32   \n",
+       "15             dblstm       crf                 3.01  5.00e-04        32x32   \n",
+       "16             dblstm       crf                 3.02  5.00e-04        32x32   \n",
+       "17             dblstm       crf                 3.00  5.00e-04  32x32x32x32   \n",
+       "18             dblstm       crf  3.sanity-check.2.00  5.00e-04  32x32x32x32   \n",
+       "19             dblstm       crf    3.sanity-check.00  5.00e-04  16x16x16x16   \n",
+       "20             dblstm       crf    3.sanity-check.00  5.00e-04  32x32x32x32   \n",
+       "21             dblstm       crf                 1.00  1.00e-04            8   \n",
+       "22             dblstm       crf                 1.00  1.00e-04           96   \n",
+       "23             dblstm       crf                 1.00  5.00e-04           16   \n",
        "\n",
        "              ctx-p     embeddings  valid-f1  train-f1  ratio-f1  \n",
        "experiment_id                                                     \n",
-       "1                 1  wang2vec/s100      1.23      0.20  0.162602  \n",
-       "2                 1      glove/s50     41.61     99.02  2.379716  \n",
-       "3                 3      glove/s50     37.75     99.22  2.628344  \n",
-       "4                 1  wang2vec/s100     37.91     78.65  2.074650  \n",
-       "5                 1      glove/s50     37.91     78.65  2.074650  \n",
-       "6                 1      glove/s50     13.89     19.38  1.395248  \n",
-       "7                 1      glove/s50     33.85     92.73  2.739439  \n",
-       "8                 1      glove/s50     24.62     74.17  3.012591  \n",
-       "9                 1      glove/s50      0.94      1.30  1.382979  \n",
-       "10                1      glove/s50     33.23     99.32  2.988865  \n",
+       "1                 1      glove/s50     41.61     99.02  2.379716  \n",
+       "2                 3      glove/s50     37.75     99.22  2.628344  \n",
+       "3                 1  wang2vec/s100     37.91     78.65  2.074650  \n",
+       "4                 1      glove/s50     37.91     78.65  2.074650  \n",
+       "5                 1      glove/s50     13.89     19.38  1.395248  \n",
+       "6                 1      glove/s50     33.85     92.73  2.739439  \n",
+       "7                 1      glove/s50     24.62     74.17  3.012591  \n",
+       "8                 1      glove/s50     24.19     99.18  4.100041  \n",
+       "9                 1      glove/s50     33.23     99.32  2.988865  \n",
+       "10                1      glove/s50     20.39     41.09  2.015204  \n",
        "11                1      glove/s50     20.39     41.09  2.015204  \n",
        "12                1      glove/s50     20.39     41.09  2.015204  \n",
-       "13                1      glove/s50     20.39     41.09  2.015204  \n",
-       "14                3      glove/s50      0.30      0.00  0.000000  \n",
+       "13                3      glove/s50      0.30      0.00  0.000000  \n",
+       "14                1      glove/s50     38.38     65.90  1.717040  \n",
        "15                1      glove/s50     38.38     65.90  1.717040  \n",
        "16                1      glove/s50     38.38     65.90  1.717040  \n",
-       "17                1      glove/s50     38.38     65.90  1.717040  \n",
-       "18                1      glove/s50     38.06     92.15  2.421177  \n",
-       "19                1      glove/s50     96.68     99.45  1.028651  \n",
-       "20                3      glove/s50     39.92     67.77  1.697645  \n",
-       "21                3      glove/s50     37.98     98.91  2.604265  \n",
-       "22                1      glove/s50     22.04       NaN       NaN  \n",
-       "23                1      glove/s50     24.92       NaN       NaN  \n",
-       "24                1      glove/s50     30.70       NaN       NaN  "
+       "17                1      glove/s50     38.06     92.15  2.421177  \n",
+       "18                1      glove/s50     96.68     99.45  1.028651  \n",
+       "19                3      glove/s50     39.92     67.77  1.697645  \n",
+       "20                3      glove/s50     37.98     98.91  2.604265  \n",
+       "21                1      glove/s50     22.04       NaN       NaN  \n",
+       "22                1      glove/s50     24.92       NaN       NaN  \n",
+       "23                1      glove/s50     30.70       NaN       NaN  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame.from_dict(experiments_d, orient='index')\n",
-    "df.index = pd.RangeIndex(start=1, stop=df.shape[0]+1, name= 'experiment_id')\n",
+    "df.sort_values('valid-f1')\n",
     "df.head(50)"
    ]
   },
