svm: pipeline ready

--- a/07-evaluations_consolidate.ipynb
+++ b/07-evaluations_consolidate.ipynb
@@ -99,6 +99,8 @@
     "    # model_prediction_version_<subversion>\n",
     "    # params[2] encodes subversion or subsubversion\n",
     "    parsestr = '{:}_{:}'.format(params[0],params[-1])\n",
+    "    if len(parsestr.split('_'))==2:\n",
+    "        import code; code.interact(local=dict(globals(), **locals()))\n",
     "    model, predictor, *version =  parsestr.split('_')\n",
     "    #version grabs everything after first two params\n",
     "    if (len(version) == 1):\n",
@@ -164,19 +166,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Python 3.6.3 |Anaconda custom (64-bit)| (default, Oct  6 2017, 12:04:38) \n",
+      "[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] on darwin\n",
+      "Type \"help\", \"copyright\", \"credits\" or \"license\" for more information.\n",
+      "(InteractiveConsole)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "liblinear accuracy:89.62\n",
-      "liblinear mse:6.57\n",
-      "liblinear accuracy:89.62\n",
-      "liblinear mse:6.57\n",
-      "svm: 49.26 49.26\n"
+      "In : parsestr\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'svm_00'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In : thisdir\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'outputs/svm/emb_c-4/00'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -194,7 +229,7 @@
     "            ARG_d = d['Y_0'] if  'Y_0' in d else d['Y_ARG']\n",
     "            valid_evaluator.evaluate(ARG_d)\n",
     "            deep_d.update(deep_leader_board(thisdir,valid_evaluator.f1))\n",
-    "        elif ('conllscore_valid.txt' in thisfiles) or ('conllscore_train.txt' in thisfiles): \n",
+    "        elif 'lstm' in thisdir and (('conllscore_valid.txt' in thisfiles) or ('conllscore_train.txt' in thisfiles)): \n",
     "            if 'conllscore_valid.txt' in thisfiles:\n",
     "                filepath= '{:}/conllscore_valid.txt'.format(thisdir)\n",
     "                valid_evaluator.evaluate_fromconllfile(filepath)\n",
@@ -208,12 +243,12 @@
     "        elif 'svm' in thisdir and (('train.pickle' in thisfiles) or ('valid.pickle' in thisfiles)):\n",
     "            if ('train.pickle' in thisfiles):                \n",
     "                filepath = '{:}/train.pickle'.format(thisdir)\n",
-    "                test_evaluator.evaluate_fromliblinear(filepath, propbank)\n",
+    "                train_evaluator.evaluate_fromliblinear(filepath, propbank)\n",
     "                \n",
     "            if ('valid.pickle' in thisfiles):                \n",
     "                filepath = '{:}/valid.pickle'.format(thisdir)\n",
-    "                test_evaluator.evaluate_fromliblinear(filepath, propbank)\n",
-    "            print('svm:', test_evaluator.f1, test_evaluator.f1)\n",
+    "                valid_evaluator.evaluate_fromliblinear(filepath, propbank)\n",
+    "            print('svm:', train_evaluator.f1, valid_evaluator.f1)\n",
     "#             svm_d.update(svm_leader_board(thisdir,valid_evaluator.f1, train_evaluator.f1))\n",
     "            "
    ]
